@@ -35,7 +35,7 @@ don't rely on cached values
 \fB\-W\fR, \fB\-\-warnings\fR=\fICATEGORY\fR
 report the warnings falling in CATEGORY
 .TP
-\fB\-s\fR, \fB\-\-set\fR=\fISET\fR
+\fB\-s\fR, \fB\-\-language\fR=\fILANG\fR
 specify the set of M4 macros to use
 .TP
 \fB\-m\fR, \fB\-\-mode\fR=\fIOCTAL\fR
@@ -43,7 +43,7 @@ change the non trace output file mode (0666)
 .TP
 \fB\-M\fR, \fB\-\-melt\fR
 don't use M4 frozen files
-.SS "Sets include:"
+.SS "Languages include:"
 .TP
 `Autoconf'
 create Autoconf configure scripts
